making it more visible to se selected Instagram images. also fixed images trying to load on creating a new activity

--- a/skalvi/static/styles/editActivity.css
+++ b/skalvi/static/styles/editActivity.css
@@ -22,7 +22,7 @@
     height: 15em;
     padding: 0.2em;
     cursor: pointer;
-    transition: .5s ease;
+    transition: .3s ease;
     backface-visibility: hidden;
 }
 
@@ -32,7 +32,13 @@
 
 .instagram-image-selected {
     box-sizing: border-box;
-    border: 1em solid #2ecc40;
+    opacity: 0.7;
+    border: 0.3em #3f51b5;
+    border-style: none none solid none;
+}
+
+.instagram-image-selected:hover {
+    opacity: 1;
 }
 
 .input-box {
